--- a/0726_01_happybath.css
+++ b/0726_01_happybath.css
@@ -12,22 +12,197 @@ a {
 body {
   font-family: Arial, "맑은 고딕", sans-serif;
 }
-.topmenu {
-    width: 100vw;
-    display: flex;
+.top {
+  position: relative;
+  width: 100vw;
 }
-.topmenu .logo{
-    
+.topmenu {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.topmenu .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 1000px;
+}
+.topmenu .logo > img {
+  width: 135px;
+  height: 135px;
+}
+.topmenu ul {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 58%;
+  top: 50%;
+  transform: translate(0, -50%);
+  z-index: 999;
+}
+/* .topmenu ul li{
+    padding: 0 20px;
+} */
+.topmenu ul li::after{
+    content: "";
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+    margin: 0 20px;
+    height: 6px;
+}
+.topmenu ul li:last-child:after{
+    border: none;
+}
+.topmenu ul li > img{
+    width: 18px;
+    height: 18px;
+}
+.menu{
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+}
+.menu ul{
+    width: 880px;
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.menu ul li a{
+    font-size: 18px;
+}
+.visual div.main{
+    display: flex;
+    justify-content: center;
+}
+.visual div.main img{
+    width: 1600px;
+    height: 520px;
+}
+.visual div.sub h3{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url(/images/happybath2/item-titbg.gif) repeat-x;
+    background-position-y: center;
+}
+.visual div.sub{
+    background: url(/images/happybath2/item-bg.png) no-repeat bottom;
+    background-position-y: 90%;
+}
+.visual div.sub ul{
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.visual div.sub ul li{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    flex: 1 1;
+}
+.visual div.sub ul li img{
+    transition: 0.5s;
+}
+.visual div.sub ul li:hover img{
+    scale: 1.05;
+}
+.visual div.sub ul li:hover a{
+    font-weight: bold;
+}
+.bottom {
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.btmleft{
+    width: 68%;
+    height: 100%;
+    box-sizing: border-box;
+    /* display: flex;
+    justify-content: center;
+    text-align: center; */
+}
+.btmleft .inner:hover{
+    border: 1px solid #333;
+}
+.btmleft h3{
+    margin: 20px auto;
+    text-align: center;
+}
+.btmleft .inner{
+    width: 100%;
+    height: 251px;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #ccc;
+}
+.btmleft .leftbox a img{
+    background: #E8E2EF;
+}
+.btmleft .rightbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: right;
+    padding: 40px;
+}
+/* .btmleft .rightbox p:nth-child(2) a{
+    width: 100%;
+} */
+.btmleft .rightbox p.star{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 20px;
+}
+.btmleft .inner p{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: space-between;
+    align-items: center;
+    flex: 0 1 20%;
+}
+.btmleft .rightbox p:first-child{
+    font-size: 20px;
+}
+.btmright{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.btmleft:hover img{
+    border: 1px solid #333;
+}
+.btmright h3{
+    margin: 20px auto;
+    text-align: center;
+}
+.btmright a img{
+    width: 285px;
+    height: 250px;
 }
 .happy {
-  width: 990px;
+  width: 1000px;
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
   /* background: #ccc; */
 }
 .happy > div {
-  width: 463px;
+  width: 495px;
   height: 400px;
   display: flex;
   flex-direction: column;
@@ -56,13 +231,13 @@ body {
 .happy ul li.third {
   background: url(/images/happybath/images/sample03.jpg);
 }
-.left .title {
+.happy .left .title {
   text-align: center;
   line-height: 306px;
   font-size: 20px;
   color: #fff;
 }
-.left .box {
+.happy .left .box {
   position: absolute;
   width: 300px;
   left: 0;
@@ -73,64 +248,68 @@ body {
   box-sizing: border-box;
   padding-top: 120px;
 }
-.left .box p:nth-child(2) {
-    display: inline-block;
-    margin-top: 10px;
+.happy .left .box p:nth-child(2) {
+  display: inline-block;
+  margin-top: 10px;
   width: 50px;
   padding: 5px 15px;
   border: 1px solid #fff;
 }
-.left .box p:nth-child(2):hover {
+.happy .left .box p:nth-child(2):hover {
   color: #333;
   background: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(255, 255, 255, 0);
 }
-.left ul:hover .title {
+.happy .left ul:hover .title {
   display: none;
 }
-.left ul li:hover .box {
+.happy .left ul li:hover .box {
   opacity: 1;
 }
-.left ul:hover li:hover {
+.happy .left ul:hover li:hover {
   flex-basis: 60%;
 }
-.left ul:hover li:not(:hover) {
+.happy .left ul:hover li:not(:hover) {
   flex-basis: 20%;
 }
-.left ul:hover {
-    border: 1px solid #333;
+.happy .left ul:hover {
+  border: 1px solid #333;
 }
-.left ul {
-    border: 1px solid transparent;
+.happy .left ul {
+  border: 1px solid transparent;
 }
-.right div{
-    width: 463px;
-    height: 306px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: url(/images/happybath/images/beautytalk.jpg) no-repeat;
-    background-size: 100%;
-    background-position: center;
-    overflow: hidden;
-    transition: 0.5s;
-    border: 1px solid transparent;
+.happy .right div {
+  width: 495px;
+  height: 306px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url(/images/happybath/images/beautytalk.jpg) no-repeat;
+  background-size: 100%;
+  background-position: center;
+  overflow: hidden;
+  transition: 0.5s;
+  border: 1px solid transparent;
 }
-.right div p{
-    font-size: 20px;
+.happy .right div p {
+  font-size: 20px;
 }
-.right div a{
-    border: 1px solid rgba(255, 255, 255, 0.8);
-    display: inline-block;
-    padding: 5px 20px;
-    margin-top: 10px;
+.happy .right div a {
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  display: inline-block;
+  padding: 5px 20px;
+  margin-top: 10px;
 }
-.right div p, .right div a{
-    color: #fff;
+.happy .right div p,
+.happy .right div a {
+  color: #fff;
 }
-.right div a:hover {
-    background-size: 120%;
-    color: #333;
-    background: rgba(255, 255, 255, 0.8);
+.happy .right div:hover {
+  background-size: 120%;
+  border: 1px solid #333;
+}
+.happy .right div a:hover {
+  color: #333;
+  background: rgba(255, 255, 255, 0.8);
 }
